--- a/extentReport.html
+++ b/extentReport.html
@@ -52,7 +52,7 @@
 		<!-- nav-right -->
 		<ul id='nav-mobile' class='right hide-on-med-and-down nav-right'>
 			<a href='#!'>
-			<span class='label blue darken-3 suite-start-time'>Jan 17, 2020 05:24:58 PM</span>
+			<span class='label blue darken-3 suite-start-time'>Jan 20, 2020 03:48:30 PM</span>
 			</a>
 		</ul>
 	</div>
@@ -110,7 +110,7 @@
                     <canvas id='parent-analysis' width='90' height='70'></canvas>
                 </div>
                 <div class='block text-small'>
-                    <span class='tooltipped' data-position='top' data-tooltip='100%'><span class='strong'>5</span> test(s) passed</span>
+                    <span class='tooltipped' data-position='top' data-tooltip='100%'><span class='strong'>1</span> test(s) passed</span>
                 </div>
                 <div class='block text-small'>
                     <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> test(s) failed, <span class='strong tooltipped' data-position='top' data-tooltip='0%'>0</span> skipped
@@ -134,69 +134,13 @@
 				<li class='test displayed active  pass' status='pass' bdd='false' test-id='1'>
 					<div class='test-heading'>
 						<span class='test-name'>login</span>
-						<span class='test-time'>Jan 17, 2020 05:24:58 PM</span>
+						<span class='test-time'>Jan 20, 2020 03:48:30 PM</span>
 						<span class='test-status right pass'>pass</span>
 					</div>
 					<div class='test-content hide'>
 <div class='test-time-info'>
-	<span class='label start-time'>Jan 17, 2020 05:24:58 PM</span>
-	<span class='label end-time'>Jan 17, 2020 05:24:58 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+0ms</span>
-</div>
-					</div>
-				</li>
-				<li class='test displayed active  pass' status='pass' bdd='false' test-id='2'>
-					<div class='test-heading'>
-						<span class='test-name'>subAdminListingFunctionality</span>
-						<span class='test-time'>Jan 17, 2020 05:25:05 PM</span>
-						<span class='test-status right pass'>pass</span>
-					</div>
-					<div class='test-content hide'>
-<div class='test-time-info'>
-	<span class='label start-time'>Jan 17, 2020 05:25:05 PM</span>
-	<span class='label end-time'>Jan 17, 2020 05:25:05 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+0ms</span>
-</div>
-					</div>
-				</li>
-				<li class='test displayed active  pass' status='pass' bdd='false' test-id='3'>
-					<div class='test-heading'>
-						<span class='test-name'>viewSubadminFunctionality</span>
-						<span class='test-time'>Jan 17, 2020 05:25:14 PM</span>
-						<span class='test-status right pass'>pass</span>
-					</div>
-					<div class='test-content hide'>
-<div class='test-time-info'>
-	<span class='label start-time'>Jan 17, 2020 05:25:14 PM</span>
-	<span class='label end-time'>Jan 17, 2020 05:25:14 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+0ms</span>
-</div>
-					</div>
-				</li>
-				<li class='test displayed active  pass' status='pass' bdd='false' test-id='4'>
-					<div class='test-heading'>
-						<span class='test-name'>appUserListingFunctionality</span>
-						<span class='test-time'>Jan 17, 2020 05:25:19 PM</span>
-						<span class='test-status right pass'>pass</span>
-					</div>
-					<div class='test-content hide'>
-<div class='test-time-info'>
-	<span class='label start-time'>Jan 17, 2020 05:25:19 PM</span>
-	<span class='label end-time'>Jan 17, 2020 05:25:19 PM</span>
-	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+0ms</span>
-</div>
-					</div>
-				</li>
-				<li class='test displayed active  pass' status='pass' bdd='false' test-id='5'>
-					<div class='test-heading'>
-						<span class='test-name'>viewAppUserFunctionality</span>
-						<span class='test-time'>Jan 17, 2020 05:25:28 PM</span>
-						<span class='test-status right pass'>pass</span>
-					</div>
-					<div class='test-content hide'>
-<div class='test-time-info'>
-	<span class='label start-time'>Jan 17, 2020 05:25:28 PM</span>
-	<span class='label end-time'>Jan 17, 2020 05:25:28 PM</span>
+	<span class='label start-time'>Jan 20, 2020 03:48:30 PM</span>
+	<span class='label end-time'>Jan 20, 2020 03:48:30 PM</span>
 	<span class='label time-taken grey lighten-1 white-text'>0h 0m 0s+0ms</span>
 </div>
 					</div>
@@ -229,7 +173,7 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Tests
-					<div class='panel-lead'>5</div>
+					<div class='panel-lead'>1</div>
 				</div>
 			</div>
 			<div class='col s2'>
@@ -241,19 +185,19 @@
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Start
-					<div class='panel-lead'>Jan 17, 2020 05:24:58 PM</div>
+					<div class='panel-lead'>Jan 20, 2020 03:48:30 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 			 		End
-			 		<div class='panel-lead'>Jan 17, 2020 05:25:34 PM</div>
+			 		<div class='panel-lead'>Jan 20, 2020 03:49:05 PM</div>
 				</div>
 			</div>
 			<div class='col s2'>
 				<div class='card-panel r'>
 					Time Taken
-					<div class='panel-lead'>0h 0m 35s+251ms</div>
+					<div class='panel-lead'>0h 0m 35s+305ms</div>
 				</div>
 			</div>
 			<div class='col s4'>
@@ -292,8 +236,8 @@
 		<!-- container -->
 		<script>
 			var statusGroup = {
-                parentCount: 5,
-				passParent: 5,
+                parentCount: 1,
+				passParent: 1,
 				failParent: 0,
 				fatalParent: 0,
 				errorParent: 0,
@@ -324,7 +268,7 @@
 		</script>
 		<script>
 			var timeline = {
-			        "login":0,"subAdminListingFunctionality":0,"viewSubadminFunctionality":0,"appUserListingFunctionality":0,"viewAppUserFunctionality":0
+			        "login":0
 			};
 		</script>
 	
